--- a/walldrop/package.json
+++ b/walldrop/package.json
@@ -13,6 +13,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
